fix(mobile): nav overflow hidden

--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -4,9 +4,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  height: 55px;
   z-index: 1;
-  overflow: hidden;
 }
 
 .container {
@@ -14,7 +12,6 @@
   justify-content: space-between;
   align-items: center;
   width: 80%;
-  height: 55px;
   margin: auto;
 }
 
@@ -68,5 +65,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    z-index: 1;
   }
 }
